--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
-  "name": "daftjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
     "express": "^4.18.2",
-    "node-html-parser": "^6.1.1",
+    "node-html-parser": "^6.1.4",
     "request": "^2.88.2"
   }
 }
